--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,6 @@ html2text>=2024.2.26
 beautifulsoup4>=4.12.3
 exchangelib>=5.4.3
 pywinpty==3.0.2; sys_platform == "win32"
+google-genai>=1.55.0
+litellm==1.80.10
+openai==2.13.0
